--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@google/genai": "^1.28.0",
     "react": "^19.2.0",
     "react-error-boundary": "^6.0.0",
-    "marked": "^16.4.1"
+    "marked": "^16.4.1",
+    "jszip": "^3.10.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
